try to fix pb with dropdown menu when collapsed can't scroll

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -220,6 +220,10 @@ input{
     font-size: x-small;
   }
 
+  .scrollable-menu {
+    max-height: 300px;
+  }
+
 }
 
 .control-group {
